风车动画时间间隔修改为一秒

--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -85,7 +85,10 @@ $lg-width: 1200px;
 		width: 40px;
 		height: 40px;
 		z-index: 100;
-		-webkit-animation: scroll 2s linear infinite;
+//		
+	}
+	.rotate{
+		animation: scroll 2s linear infinite;
 	}
 	#fengchegan {
 		z-index: 99;
