--- a/css/layout.css
+++ b/css/layout.css
@@ -66,7 +66,9 @@
   width: 40px;
   height: 40px;
   z-index: 100;
-  -webkit-animation: scroll 2s linear infinite;
+}
+#changeBgImg .rotate {
+  animation: scroll 2s linear infinite;
 }
 #changeBgImg #fengchegan {
   z-index: 99;
