--- a/css/layout.css
+++ b/css/layout.css
@@ -7,11 +7,13 @@
 #wrap {
   width: 100%;
   height: 100%;
-  background: url(../img/back.jpg) no-repeat center;
   position: absolute;
   top: 0;
   left: 0;
   background-size: cover;
+  transition: all ease .3s;
+  -webkit-transition: all ease .3s;
+  -moz-transition: all ease .3s;
 }
 
 .nav-pills > li {
@@ -89,6 +91,17 @@
   }
   100% {
     -webkit-transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes bgImg {
+  0% {
+    -webkit-transform: scale(0.8);
+  }
+  50% {
+    -weblit-transform: scale(0.9);
+  }
+  100% {
+    -webkit-transform: scale(1);
   }
 }
 #search-bar {
