--- a/css/layout.css
+++ b/css/layout.css
@@ -4,6 +4,10 @@
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+body {
+  overflow: hidden;
+}
+
 #wrap {
   width: 100%;
   height: 100%;
