--- a/css/side.css
+++ b/css/side.css
@@ -65,5 +65,28 @@ body > aside {
   cursor: pointer;
   border-bottom: 2px solid #fdfdfd;
 }
+#aside-content .search-border {
+  text-align: center;
+  margin-top: 52px;
+}
+#aside-content .search-border input[type="search"] {
+  width: 250px;
+  height: 32px;
+  border: 1px solid #ECF0F1;
+  border-radius: 30px;
+  padding: 0 10px;
+  line-height: 32px;
+  color: #555;
+  font-size: 14px;
+  margin: 0;
+  outline: 0;
+  font-family: "Segoe UI", "Microsoft Yahei", Arial;
+}
+#aside-content .search-border input[type="search"]:focus {
+  border: 1px solid #3dde3d;
+}
+#aside-content .search-border input:nth-of-type(2) {
+  margin-top: 15px;
+}
 
 /*# sourceMappingURL=side.css.map */
