--- a/sass/side.scss
+++ b/sass/side.scss
@@ -66,4 +66,27 @@ body > aside {
 			border-bottom: 2px solid rgb(253, 253, 253);
 		}
 	}
+	.search-border {
+		text-align: center;
+		margin-top: 52px;
+		input[type="search"] {
+			width: 250px;
+			height: 32px;
+			border: 1px solid #ECF0F1;
+			border-radius: 30px;
+			padding: 0 10px;
+			line-height: 32px;
+			color: #555;
+			font-size: 14px;
+			margin: 0;
+			outline: 0;
+			font-family: "Segoe UI", "Microsoft Yahei", Arial;
+		}
+		input[type="search"]:focus {
+			border: 1px solid #3dde3d;
+		}
+		input:nth-of-type(2) {
+			margin-top: 15px;
+		}
+	}
 }
