--- a/css/side.css
+++ b/css/side.css
@@ -49,6 +49,9 @@ body > aside {
   text-shadow: 0 -4px;
 }
 
+#aside-content {
+  font-size: 14px;
+}
 #aside-content .asideTitle {
   background-color: #2ECC71;
   font-size: 22px;
@@ -77,16 +80,22 @@ body > aside {
   padding: 0 10px;
   line-height: 32px;
   color: #555;
-  font-size: 14px;
   margin: 0;
   outline: 0;
-  font-family: "Segoe UI", "Microsoft Yahei", Arial;
+  font-size: 1rem;
 }
 #aside-content .search-border input[type="search"]:focus {
   border: 1px solid #3dde3d;
 }
 #aside-content .search-border input:nth-of-type(2) {
   margin-top: 15px;
+}
+#aside-content #previewName {
+  width: 200px;
+  height: 60px;
+  color: #33C5C5;
+  text-align: center;
+  font-size: 1rem;
 }
 
 /*# sourceMappingURL=side.css.map */
