--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -9,6 +9,7 @@ $sm-width: 768px;
 $md-width: 992px;
 $lg-width: 1200px;
 body{
+		font-family: "Segoe UI","Microsoft Yahei",Arial;
 		overflow: hidden;
 }
 #wrap {
