--- a/sass/side.scss
+++ b/sass/side.scss
@@ -11,12 +11,13 @@
 }
 
 body > aside {
+	z-index: 999;
 	position: absolute;
 	top: 0;
 	bottom: 0;
 	right: -350px;
 	width: 350px;
-	background: #f1103a;
+	background: #fff;
 	transition: 0.2s ease-out;
 	-webkit-transition: 0.2s ease-out;
 }
@@ -47,6 +48,10 @@ body > aside {
 	line-height: 35px;
 	text-align: center;
 	text-shadow: 0 -4px;
+}
+
+#sideMenuControl {
+	z-index: 999;
 }
 
 #aside-content {
@@ -95,5 +100,36 @@ body > aside {
 		color: #33C5C5;
 		text-align: center;
 		font-size: 1rem;
+	}
+	#iconBgColor {
+		margin-left: 50px;
+		width: 265px;
+		height: 80px;
+		margin-top: 40px;
+		.iconBgColor {
+			width: 30px;
+			height: 30px;
+			border-radius: 20px;
+			border: 2px solid transparent;
+			background-clip: content-box;
+			float: left;
+			margin-right: 14px;
+			margin-bottom: 10px;
+			cursor: pointer;
+			padding: 2px;
+			transition: all .15s ease;
+			&:hover {
+				transform: scale(1.2);
+			}
+			
+		}
+		#colorPicker {
+			background-image: url(../img/color.png);
+			background-size: 100%;
+		}
+		#colorTransparent {
+			background-image: url(../img/transparent.png);
+			background-size: 100%;
+		}
 	}
 }
