弹出框布局完成

--- a/css/side.css
+++ b/css/side.css
@@ -33,21 +33,17 @@ body > aside {
 
 #wrap-side > label {
   position: absolute;
-  top: 30px;
+  top: 18px;
   right: 40px;
-  background: #f1103a;
-  border-radius: 50px;
-  color: #FFF;
+  background: url(../img/add.png) no-repeat;
+  background-size: 100%;
+  border-radius: 21px;
   cursor: pointer;
   display: block;
-  font-family: Courier New;
-  font-size: 25px;
-  font-weight: bold;
-  width: 30px;
-  height: 30px;
-  line-height: 35px;
-  text-align: center;
-  text-shadow: 0 -4px;
+  width: 40px;
+  height: 40px;
+  box-shadow: #e74c3c 0 0 10px;
+  transition: all .35s ease;
 }
 
 #sideMenuControl {
@@ -76,6 +72,7 @@ body > aside {
 #aside-content .search-border {
   text-align: center;
   margin-top: 52px;
+  margin-bottom: 10px;
 }
 #aside-content .search-border input[type="search"] {
   width: 250px;
@@ -97,16 +94,19 @@ body > aside {
 }
 #aside-content #previewName {
   width: 200px;
-  height: 60px;
   color: #33C5C5;
   text-align: center;
-  font-size: 1rem;
+  font-size: 1.5rem;
+  margin-top: 10px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 #aside-content #iconBgColor {
   margin-left: 50px;
   width: 265px;
   height: 80px;
-  margin-top: 40px;
+  margin-top: 25px;
 }
 #aside-content #iconBgColor .iconBgColor {
   width: 30px;
@@ -124,13 +124,34 @@ body > aside {
 #aside-content #iconBgColor .iconBgColor:hover {
   transform: scale(1.2);
 }
-#aside-content #iconBgColor #colorPicker {
+#aside-content #colorPicker {
   background-image: url(../img/color.png);
   background-size: 100%;
 }
-#aside-content #iconBgColor #colorTransparent {
+#aside-content #colorTransparent {
   background-image: url(../img/transparent.png);
   background-size: 100%;
+}
+#aside-content #addBtn {
+  margin-left: 50px;
+  width: 100%;
+  height: auto;
+  margin-top: 20px;
+}
+#aside-content #addBtn input[type="button"] {
+  width: 250px;
+  height: 35px;
+  line-height: 35px;
+  text-align: center;
+  letter-spacing: .3em;
+  margin: 0;
+  border: none;
+  background-color: #2ECC71;
+  color: #fdfdfd;
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: 40px;
+  font-family: "Segoe UI", "Microsoft Yahei", Arial;
 }
 
 /*# sourceMappingURL=side.css.map */
