--- a/css/side.css
+++ b/css/side.css
@@ -93,7 +93,7 @@ body > aside {
   margin-top: 15px;
 }
 #aside-content #previewName {
-  width: 200px;
+  width: 150px;
   color: #33C5C5;
   text-align: center;
   font-size: 1.5rem;
@@ -101,6 +101,7 @@ body > aside {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  padding-left: 50px;
 }
 #aside-content #iconBgColor {
   margin-left: 50px;
