--- a/sass/side.scss
+++ b/sass/side.scss
@@ -93,6 +93,7 @@ body > aside {
 	}
 	#previewName {
     width: 150px;
+    height: 21px;
 		color: #33C5C5;
 		text-align: center;
 		font-size: 1.5rem;
