--- a/css/layout.css
+++ b/css/layout.css
@@ -112,6 +112,7 @@ body {
   padding-top: 30px;
 }
 #search-bar .search-wrap {
+  position: relative;
   width: 360px;
 }
 @media (min-width: 768px) {
@@ -160,7 +161,8 @@ body {
     height: 40px;
   }
 }
-#search-bar input:nth-child(2) {
+#search-bar #searchButton {
+  position: absolute;
   width: 30px;
   height: 28px;
   border-radius: 0 40px 40px 0;
@@ -168,21 +170,27 @@ body {
   margin-left: -4px;
   cursor: pointer;
   background-color: #fff;
+  transition: .2s;
+  /*&:hover {
+    background: url(../img/search_icon.png) no-repeat center;
+    background-color: #2ECC71;
+    background-size: 35%;
+  }*/
 }
 @media (min-width: 768px) {
-  #search-bar input:nth-child(2) {
+  #search-bar #searchButton {
     height: 30px;
     width: 40px;
   }
 }
 @media (min-width: 992px) {
-  #search-bar input:nth-child(2) {
+  #search-bar #searchButton {
     height: 35px;
     width: 45px;
   }
 }
 @media (min-width: 1200px) {
-  #search-bar input:nth-child(2) {
+  #search-bar #searchButton {
     height: 40px;
     width: 50px;
   }
