--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -1,6 +1,6 @@
 * {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 //屏幕宽度定义
@@ -8,264 +8,271 @@ $sm-width: 768px;
 $md-width: 992px;
 $lg-width: 1200px;
 body {
-	font-family: "Segoe UI", "Microsoft Yahei", Arial;
-	overflow: hidden;
+  font-family: "Segoe UI", "Microsoft Yahei", Arial;
+  overflow: hidden;
 }
 
 #wrap {
-	width: 100%;
-	height: 100%;
-	//	background: url(../img/back.jpg) no-repeat center;
-	position: absolute;
-	top: 0;
-	left: 0;
-	background-size: cover;
-	transition: all ease .3s;
-	-webkit-transition: all ease .3s;
-	-moz-transition: all ease .3s;
+  width: 100%;
+  height: 100%;
+  //	background: url(../img/back.jpg) no-repeat center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-size: cover;
+  transition: all ease .3s;
+  -webkit-transition: all ease .3s;
+  -moz-transition: all ease .3s;
 }
 
 .nav-pills > li {
-	float: none;
-	display: inline-block;
-	padding-top: 35px;
-	a {
-		@media (min-width: #{$sm-width}) {
-			font-size: 14px;
-		}
-		@media (min-width: #{$md-width}) {
-			font-size: 16px;
-		}
-		@media (min-width: #{$lg-width}) {
-			font-size: 18px;
-		}
-		color: #fff;
-		//    font-weight: bold;
-		padding: 2px 0;
-		margin: 0 10px;
-		border-radius: 0;
-		&:hover {
-			background: none;
-			color: #fff;
-			border-bottom: 1px solid #4eef4e;
-		}
-		&:focus {
-			background: none;
-		}
-	}
+  float: none;
+  display: inline-block;
+  padding-top: 35px;
+  a {
+    @media (min-width: #{$sm-width}) {
+      font-size: 14px;
+    }
+    @media (min-width: #{$md-width}) {
+      font-size: 16px;
+    }
+    @media (min-width: #{$lg-width}) {
+      font-size: 18px;
+    }
+    color: #fff;
+    //    font-weight: bold;
+    padding: 2px 0;
+    margin: 0 10px;
+    border-radius: 0;
+    &:hover {
+      background: none;
+      color: #fff;
+      border-bottom: 1px solid #4eef4e;
+    }
+    &:focus {
+      background: none;
+    }
+  }
 }
 
 .a-active {
-	border-bottom: 1px solid #4eef4e;
+  border-bottom: 1px solid #4eef4e;
 }
 
 @mixin sm {
-	@media (min-width:#{$sm-width}) {
-		width: 40px;
-		height: 40px;
-	}
+  @media (min-width:#{$sm-width}) {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 @mixin md {
-	@media (min-width:#{$md-width}) {
-		width: 45px;
-		height: 45px;
-	}
+  @media (min-width:#{$md-width}) {
+    width: 45px;
+    height: 45px;
+  }
 }
 
 @mixin lg {
-	@media (min-width:#{$lg-width}) {
-		width: 55px;
-		height: 55px;
-	}
+  @media (min-width:#{$lg-width}) {
+    width: 55px;
+    height: 55px;
+  }
 }
 
 #changeBgImg {
-	position: absolute;
-	right: 85px;
-	bottom: 59px;
-	.btn-img {
-		position: absolute;
-		top: 0;
-		left: 0;
-		cursor: pointer;
-		width: 40px;
-		height: 40px;
-		z-index: 100;
-		//		
-	}
-	.rotate {
-		animation: scroll 2s linear infinite;
-	}
-	#fengchegan {
-		z-index: 99;
-		width: 5px;
-		height: 30px;
-		background: #FEFEFE;
-		position: absolute;
-		top: 30px;
-		right: 7px;
-	}
+  position: absolute;
+  right: 85px;
+  bottom: 59px;
+  .btn-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    z-index: 100;
+    //		
+  }
+  .rotate {
+    animation: scroll 2s linear infinite;
+  }
+  #fengchegan {
+    z-index: 99;
+    width: 5px;
+    height: 30px;
+    background: #FEFEFE;
+    position: absolute;
+    top: 30px;
+    right: 7px;
+  }
 }
 
 @-webkit-keyframes scroll {
-	0% {
-		-webkit-transform: rotate(0deg);
-	}
-	50% {
-		-weblit-transform: rotate(180deg);
-	}
-	100% {
-		-webkit-transform: rotate(360deg);
-	}
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  50% {
+    -weblit-transform: rotate(180deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
 }
 
 @-webkit-keyframes bgImg {
-	0% {
-		-webkit-transform: scale(.8);
-	}
-	50% {
-		-weblit-transform: scale(.9);
-	}
-	100% {
-		-webkit-transform: scale(1.0);
-	}
+  0% {
+    -webkit-transform: scale(.8);
+  }
+  50% {
+    -weblit-transform: scale(.9);
+  }
+  100% {
+    -webkit-transform: scale(1.0);
+  }
 }
 
 #search-bar {
-	padding-top: 30px;
-	.search-wrap {
-		width: 360px;
-		@media (min-width: #{$sm-width}) {
-			width: 400px;
-		}
-		@media (min-width: #{$md-width}) {
-			width: 455px;
-		}
-		@media (min-width: #{$lg-width}) {
-			width: 560px;
-		}
-	}
-	input:nth-child(1) {
-		background: url(../img/search-baidu.png) no-repeat 10px;
-		background-size: 5%;
-		text-indent: 43px;
-		line-height: 40px;
-		border: none;
-		background-color: #fff;
-		border-radius: 40px 0 0 40px;
-		outline: none;
-		letter-spacing: 2px;
-		width: 330px;
-		height: 28px;
-		@media (min-width: #{$sm-width}) {
-			width: 360px;
-			height: 30px;
-		}
-		@media (min-width: #{$md-width}) {
-			width: 410px;
-			height: 35px;
-		}
-		@media (min-width: #{$lg-width}) {
-			width: 510px;
-			height: 40px;
-		}
-	}
-	input:nth-child(2) {
-		width: 30px;
-		height: 28px;
-		border-radius: 0 40px 40px 0;
-		border: none;
-		margin-left: -4px;
-		cursor: pointer;
-		//    background: url(../img/search_icon.png) no-repeat center;
-		background-color: #fff;
-		//    background-size: 50%;
-		@media (min-width: #{$sm-width}) {
-			height: 30px;
-			width: 40px;
-		}
-		@media (min-width: #{$md-width}) {
-			height: 35px;
-			width: 45px;
-		}
-		@media (min-width: #{$lg-width}) {
-			height: 40px;
-			width: 50px;
-		}
-	}
+  padding-top: 30px;
+  .search-wrap {
+    position: relative;
+    width: 360px;
+    @media (min-width: #{$sm-width}) {
+      width: 400px;
+    }
+    @media (min-width: #{$md-width}) {
+      width: 455px;
+    }
+    @media (min-width: #{$lg-width}) {
+      width: 560px;
+    }
+  }
+  input:nth-child(1) {
+    background: url(../img/search-baidu.png) no-repeat 10px;
+    background-size: 5%;
+    text-indent: 43px;
+    line-height: 40px;
+    border: none;
+    background-color: #fff;
+    border-radius: 40px 0 0 40px;
+    outline: none;
+    letter-spacing: 2px;
+    width: 330px;
+    height: 28px;
+    @media (min-width: #{$sm-width}) {
+      width: 360px;
+      height: 30px;
+    }
+    @media (min-width: #{$md-width}) {
+      width: 410px;
+      height: 35px;
+    }
+    @media (min-width: #{$lg-width}) {
+      width: 510px;
+      height: 40px;
+    }
+  }
+  #searchButton {
+    position: absolute;
+    width: 30px;
+    height: 28px;
+    border-radius: 0 40px 40px 0;
+    border: none;
+    margin-left: -4px;
+    cursor: pointer;
+    //    background: url(../img/search_icon.png) no-repeat center;
+    background-color: #fff;
+    transition: .2s;
+    /*&:hover {
+      background: url(../img/search_icon.png) no-repeat center;
+      background-color: #2ECC71;
+      background-size: 35%;
+    }*/
+    @media (min-width: #{$sm-width}) {
+      height: 30px;
+      width: 40px;
+    }
+    @media (min-width: #{$md-width}) {
+      height: 35px;
+      width: 45px;
+    }
+    @media (min-width: #{$lg-width}) {
+      height: 40px;
+      width: 50px;
+    }
+  }
 }
 
 @-webkit-keyframes breathe {
-	from {
-		box-shadow: 0px 0px 5px #1d5ded;
-	}
-	to {
-		box-shadow: 0px 0px 30px #1d5ded;
-	}
+  from {
+    box-shadow: 0px 0px 5px #1d5ded;
+  }
+  to {
+    box-shadow: 0px 0px 30px #1d5ded;
+  }
 }
 
 @-moz-keyframes breathe {
-	from {
-		box-shadow: 0px 0px 5px #1d5ded;
-	}
-	to {
-		box-shadow: 0px 0px 30px #1d5ded;
-	}
+  from {
+    box-shadow: 0px 0px 5px #1d5ded;
+  }
+  to {
+    box-shadow: 0px 0px 30px #1d5ded;
+  }
 }
 
 @-o-keyframes breathe {
-	from {
-		box-shadow: 0px 0px 5px #1d5ded;
-	}
-	to {
-		box-shadow: 0px 0px 30px #1d5ded;
-	}
+  from {
+    box-shadow: 0px 0px 5px #1d5ded;
+  }
+  to {
+    box-shadow: 0px 0px 30px #1d5ded;
+  }
 }
 
 @keyframes breathe {
-	from {
-		box-shadow: 0px 0px 5px #1d5ded;
-	}
-	to {
-		box-shadow: 0px 0px 20px #1d5ded;
-	}
+  from {
+    box-shadow: 0px 0px 5px #1d5ded;
+  }
+  to {
+    box-shadow: 0px 0px 20px #1d5ded;
+  }
 }
 
 #main {
-	padding-top: 25px;
-	.icon-first-line {
-		margin-bottom: 25px;
-	}
-	.save-img {
-		padding-top: 10px;
-		img {
-			width: 50px;
-			height: 50px;
-			cursor: pointer;
-			&:hover {
-				-webkit-animation: breathe .5s ease-in-out 0s infinite alternate;
-				-moz-animation: breathe .5s ease-in-out 0s infinite alternate;
-				-o-animation: breathe .5s ease-in-out 0s infinite alternate;
-				animation: breathe .5s ease-in-out 0s infinite alternate;
-			}
-			@media (min-width: #{$sm-width}) {
-				width: 60px;
-				height: 60px;
-			}
-			@media (min-width: #{$md-width}) {
-				width: 80px;
-				height: 80px;
-			}
-			@media (min-width: #{$lg-width}) {
-				width: 100px;
-				height: 100px;
-			}
-		}
-		p {
-			color: #fff;
-			font-weight: bold;
-			padding-top: 10px;
-		}
-	}
+  padding-top: 25px;
+  .icon-first-line {
+    margin-bottom: 25px;
+  }
+  .save-img {
+    padding-top: 10px;
+    img {
+      width: 50px;
+      height: 50px;
+      cursor: pointer;
+      &:hover {
+        -webkit-animation: breathe .5s ease-in-out 0s infinite alternate;
+        -moz-animation: breathe .5s ease-in-out 0s infinite alternate;
+        -o-animation: breathe .5s ease-in-out 0s infinite alternate;
+        animation: breathe .5s ease-in-out 0s infinite alternate;
+      }
+      @media (min-width: #{$sm-width}) {
+        width: 60px;
+        height: 60px;
+      }
+      @media (min-width: #{$md-width}) {
+        width: 80px;
+        height: 80px;
+      }
+      @media (min-width: #{$lg-width}) {
+        width: 100px;
+        height: 100px;
+      }
+    }
+    p {
+      color: #fff;
+      font-weight: bold;
+      padding-top: 10px;
+    }
+  }
 }
